@@ -7,6 +7,7 @@
   - move $smarty->loadPlugin() into extension
   - minor compiler optimizations
   - bugfix allow function plugins with name ending with 'close' https://github.com/smarty-php/smarty/issues/52
+  - rework of $smarty->clearCompiledTemplate() and move it to its own extension
 
  19.06.2015
   - improvement allow closures as callback at $smarty->registerFilter() https://github.com/smarty-php/smarty/issues/59
